# ESP_IDF_LWIP-TOE

./: .gitmodules  CMakeLists.txt  PUSH_TEST.md
components/ethernet_init/: CMakeLists.txt  ethernet_init.c
components/wiznet_toe/: CMakeLists.txt  Kconfig
components/wiznet_toe/include/: toe_bsd.h  toe_socket.h  wiznet_spi_shared.h  wiznet_toe.h
components/wiznet_toe/src/: toe_bsd.c  toe_bsd_demo.c  toe_demo.c  toe_dispatcher.c  toe_netif.c  toe_socket.c  wiznet_spi_port.c  wiznet_spi_shared.c  wiznet_toe.c  wiznet_toe_port.h  wiznet_toe_stub.c
docs/: BACKUP_pre_lwip_revive_README.md  CLAUDE_HANDOFF_2026-05-29.md  ESP_IDF_TOE_LWIP_통합_계획서.md  STAGE1_lwIP_revive.md  W5500_TOE_LWIP_아키텍처.html  W5500_TOE_LWIP_아키텍처.md  WIZNET_TOE_CHANGELOG.md  WIZNET_TOE_HANDOFF.md  _md2html.py
main/: CMakeLists.txt  ethernet_example_main.c
